name:                hsmedstream
version:             0.0.1.0
-- synopsis:            
-- description:         
license:             ISC
license-file:        LICENSE
author:              Jona Joachim
maintainer:          jona@joachim.cc
-- copyright:           
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable anistream
    main-is:             AniStream.hs
    -- other-modules:
    -- other-extensions:
    build-depends:       base, serialport, lens, zeromq4-haskell,
                         bytestring, text,
                         time, attoparsec, data-msgpack,
                         pipes, pipes-attoparsec, pipes-parse,
                         pipes-text, pipes-zeromq4
    hs-source-dirs:      src
    default-language:    Haskell2010
    ghc-options: -W

executable odmstream
    main-is:             OdmStream.hs
    -- other-modules:
    -- other-extensions:
    build-depends:       base, serialport, lens, zeromq4-haskell,
                         bytestring, text,
                         time, attoparsec, data-msgpack,
                         pipes, pipes-attoparsec, pipes-parse,
                         pipes-text, pipes-zeromq4
    hs-source-dirs:      src
    default-language:    Haskell2010
    ghc-options: -W
